# swagger.json
@@ -997,7 +997,8 @@
         }
       }
     },
-      "/users/{id}": {
+  
+    "/users/{id}": {
       "get": {
         "summary": "Get user details by ID",
         "parameters": [
@@ -1064,8 +1065,9 @@
           }
         }
       }
-     }
     }
-}
+  }
+ }
+
 
 
